--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 16
+      - run: cd custom-vue-package && npm install 
       - run: cd custom-vue-package && npm run build
 
   publish-gpr:
