--- a/custom-vue-package/package.json
+++ b/custom-vue-package/package.json
@@ -20,5 +20,8 @@
     "vite": "^6.0.1",
     "vite-plugin-dts": "^4.3.0",
     "vue-tsc": "^2.1.10"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
